Bug 127882 - Libreoffice 6.3.2 crashes on document properties (gtk3 3.18)
Summary: Libreoffice 6.3.2 crashes on document properties (gtk3 3.18)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.2.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-30 12:12 UTC by Bich 30
Modified: 2019-10-05 12:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bich 30 2019-09-30 12:12:39 UTC
Description:
Libreoffice 6.3.2 crash when I open the document properties from: File - Properties.
By pressing the Accept or Cancel button, Libreoffice crash

Steps to Reproduce:
1. Open a document in writer
2.Choose File-Properties
3.Click in "Accept"

Actual Results:
Crash

Expected Results:
Writer open usually.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Libreoffice

Versión: 6.3.2.2
Id. de compilación: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
Subprocs. CPU: 4; SO: Linux 4.10; Repres. IU: predet.; VCL: gtk3; 
Configuración regional: es-ES (es_ES.UTF-8); Idioma de IU: es-ES
Calc: threaded
Comment 1 Roman Kuznetsov 2019-09-30 13:49:32 UTC
don't repro in

Версия: 6.4.0.0.alpha0+ (x86)
ID сборки: c45d477b0a0038d9c25176cf7cff299e5ddf3a7a
Потоков ЦП: 4; ОС:Windows 6.1; Отрисовка ИП: по умолчанию; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-09-30_05:06:55
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded
Comment 2 Xavier Van Wijmeersch 2019-09-30 16:02:39 UTC
can not reproduce with

Version: 6.3.2.2
Build ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU threads: 8; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: nl-BE (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Julien Nabet 2019-09-30 19:47:47 UTC
Do you reproduce this for a brand new file or for a specific file?
Is your file on local hard disk/ssd or on a network?

Could you give a try to:
https://wiki.documentfoundation.org/QA/FirstSteps ?
Comment 4 Bich 30 2019-10-02 09:46:00 UTC
The file is in local, it also fails with a new file.
The Calc also fails.
Indicate crashreport number for calc and writer:

Calc: crashreport.libreoffice.org/stats/crash_details/036eb0b2-4010-4799-8099-25d40fbf8308

Writer: crashreport.libreoffice.org/stats/crash_details/fa37f650-b88d-4db5-a58d-e7fd1a23a887
Comment 5 Bich 30 2019-10-02 10:16:56 UTC
In the appimage I have the same bug.
Attach the crashreport:
http://crashreport.libreoffice.org/stats/crash_details/9c0f5b84-b934-4da9-ae72-74eb68a6b197
Comment 6 Julien Nabet 2019-10-02 14:00:26 UTC
Thank you for the crashreports.

I wonder it could be due to an old version of gtk3.
Indeed, I noticed Ubuntu 16.04
Could you provide the result of:
dpkg -s libgtk-3-0|grep '^Version'
?
Comment 7 Julien Nabet 2019-10-02 14:14:48 UTC
Could you try to reproduce the crash by using a different rendering than gtk3?
On console, type:
SAL_USE_VCLPLUGIN=gen;soffice --writer

The goal is to be sure it's gtk3 related.
Comment 8 Bich 30 2019-10-02 15:52:04 UTC
Attach the info request:
       dpkg -s libgtk-3-0|grep '^Version'
       Version: 3.18.9-1ubuntu3.3

And with: "SAL_USE_VCLPLUGIN=gen;soffice --writer"
thw libreoffice crash.
The crashreport is:
crashreport.libreoffice.org/stats/crash_details/41893c67-feda-42fa-92bc-9e440f752ed0
Comment 9 Julien Nabet 2019-10-02 18:28:10 UTC
2 things:
1) version 3.18 is old.
2) I don't understand why gtk3 still appears here whereas you use "gen" rendering with the command I provided.

You can test the command a bit differently.
In a console, type these:
export SAL_USE_VCLPLUGIN=gen
soffice --writer

then try to reproduce this again.
If crashreport still displays gtk3, I've got no more ideas.
Comment 10 Bich 30 2019-10-03 06:03:56 UTC
with:
export SAL_USE_VCLPLUGIN = gen
it works perfectly.
Thank you!
Comment 11 Julien Nabet 2019-10-03 07:03:52 UTC
Caolán: is there something which can help on crashreports?

Bich30 : if possible you can try to upgrade to a more recent Ubuntu version (18.04 is an LTS too).
Comment 12 Bich 30 2019-10-03 10:17:35 UTC
I can't upgrade to ubuntu 18
Comment 13 Caolán McNamara 2019-10-03 11:10:07 UTC
I can reproduce this with gtk 3.18
Comment 14 Commit Notification 2019-10-03 12:53:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f29aa28100b899252a3419578be5d39e84863c36

Resolves: tdf#127882 gtk 3.18 crash in property dialog teardown

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Caolán McNamara 2019-10-03 12:54:17 UTC
fixed in master, backport to 6-3 in gerrit
Comment 16 Commit Notification 2019-10-05 12:24:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/b5e6978869227d70eb68a6fd25922674a21b8c8f

Resolves: tdf#127882 gtk 3.18 crash in property dialog teardown

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.