Resolves: tdf#127882 gtk 3.18 crash in property dialog teardown

due to the menubutton popovers in the custom property page

workaround by reordering so scrolling window is torn down after the menubutton
is destroyed and clear the popover in the menubutton dtor

Change-Id: Icf06d912524af13a5590f160150f1a4e15f3e9f7